--- a/frontend/src/app/layout/footer/footer.component.scss
+++ b/frontend/src/app/layout/footer/footer.component.scss
@@ -5,9 +5,10 @@ footer {
   width: 100%;
   background: #F8F9FA;
   border-top: 1px solid #CCCCCC;
-  padding-left: 20%;
-  padding-right: 15%;
+  padding-left: 10%;
+  padding-right: 10%;
   padding-top: 50px;
+  overflow: auto;
 }
 
 .title {
@@ -29,14 +30,22 @@ footer {
   line-height: 24px;
   letter-spacing: 0.15px;
   color: #4D4D4D;
+  margin-bottom: 0;
 }
 
 svg {
-  float: right;
+  float: left;
 }
 
-.col-6, .col-8, .col-4{
+.col-md-6, .col-md-2 {
+  justify-items: start;
+  justify-content: start;
+  flex-direction: column;
+}
+
+.contact{
+  display: flex;
+  flex-direction: column;
   justify-items: center;
   justify-content: center;
-  flex-direction: column;
 }
