--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -81,6 +81,6 @@ fieldset {
   display: block;
   max-width: 100%;
   height: auto;
-  max-height: 30px;
+  max-height: 60px;
   padding: 3px;
 }
